...
    android:clickable="false"
    tools:context=".main.meeting.MeetingFragment">

    <FrameLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/search_rest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.pchmn.materialchips.ChipsInput
            android:id="@+id/chips_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contextClickable="false"
            app:hint="Enter guest name"
            app:layout_constraintBottom_toTopOf="@+id/search_rest"
            app:layout_constraintEnd_toEndOf="parent"
...
            app:layout_constraintVertical_bias="0.582"
            app:maxRows="1" />

    </FrameLayout>

    <Button
        android:id="@+id/createmeeting"
        android:layout_width="208dp"
        android:layout_height="62dp"
        android:text="@string/create_meeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
...
        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
        android:elevation="0.5dp"
        android:gravity="center_vertical"
        android:hint=""
        android:padding="12dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736"
        tools:ignore="UseCompatTextViewDrawableXml" />
...
        android:layout_alignParentStart="true"
        android:autofillHints=""
        android:inputType=""
        app:layout_constraintBottom_toTopOf="@+id/createmeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toEndOf="@+id/btn_time"
        app:layout_constraintTop_toBottomOf="@+id/in_date"
        app:layout_constraintVertical_bias="0.487"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_time"
...
