<resources>

    <!--    backend url for both local backend and azure backend-->
    <string name="backend_url">http://13.77.158.161:3000</string>
<!--            <string name="backend_url">http://192.168.1.66:3000</string>-->

    <string name="app_name">SnackBud</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_menu_one"/>
    <string name="bottom_menu_two"/>
    <string name="bottom_menu_three"/>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="create_meeting">Create Meeting</string>
    <string name="guest_name">Guest Name</string>
    <string name="meeting_time">Meeting Time</string>
    <string name="personName">personName</string>
    <string name="covid_report">Report Covid Symptoms</string>
    <string name="verify_meetup">Verify Meetup</string>
    <string name="begin_meetup_search">Find Meetup!</string>
    <string name="userIdNull">UserId: null</string>
    <string name="nameAnon">Name: Anon</string>
    <string name="permission_request">Permission Request</string>
    <string name="need_device_location_to_provide_required_services">Need device location to provide required services
    </string>
    <string name="snackbud_logo">snackbud logo</string>
    <string name="grant_permission">GRANT PERMISSION</string>
    <string name="verify_meetup_profile">Verify MeetUp</string>
    <string name="enter_code">Enter</string>
    <string name="eventid_verify_meetup">EventId:</string>
    <string name="enter_code_text">Enter Code:</string>
    <string name="exit_icon">exit icon</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="todo">TODO</string>
    <string name="select_time">SELECT TIME</string>
    <string name="choose_guest">Choose Guest:</string>
    <string name="choose_restaurant">Choose Restaurant:</string>
    <string name="select_date">SELECT DATE</string>

    <string name="verifyText">Please select an Event to verify</string>
    <string name="locationWarning">Please get to the restaurant to verify!</string>
    <string name="verifyWarning">Please enter a valid verify code (it must be 3 digits)</string>
    <string name="enter">Press enter and then verify meetup to verify</string>
    <string name="select_restaurant">Select Restaurant</string>
    <string name="choose_restaurant_dialog">Choose Restaurant</string>
    <string name="search_restaurant_dialog">Search restaurant...</string>
    <string name="click_here_to_choose">Click here to choose</string>
    <string name="isCorrect">Looks Incorrect, Please enter the correct digits</string>
    <string name="support">Support</string>
    <string name="title_activity_cancel_meetup">CancelMeetup</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cancel_event">Cancel Event</string>
    <string name="cancel_meetup">cancel meetup</string>
</resources>