...
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.profile.verifymeetup.VerifyMeetup">

    <Button
            android:id="@+id/send_code"
            android:layout_width="208dp"
            android:layout_height="62dp"
            android:text="@string/verify_meetup_profile"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp"
            android:layout_alignParentEnd="true"
...
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="200dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="150dp"/>

    <Spinner
            android:id="@+id/eventSpinner"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:textColor="#000000"
            android:layout_marginTop="200dp"
...
            android:layout_marginEnd="270dp"
            android:layout_alignParentEnd="true" android:layout_alignParentStart="true"/>

    <EditText android:inputType="number"
              android:layout_width="330dp"
              android:layout_height="42dp"
              android:id="@+id/verify_meetup_code"
              android:layout_marginTop="400dp"
              android:layout_alignParentTop="true"
              android:layout_marginEnd="42dp"
              android:layout_alignParentEnd="true"
              android:autofillHints=""
              tools:ignore="LabelFor"/>
...
